 - All levels of Well Fed last for 3x as many steps (50 → 150, 100 → 300, 150 → 450).
 - Reworked most early-game weapons to not be completely useless. Notable reworks (aside from stat/price changes):
  ~ Wisp Wand: Originally the Traveler Wand. Increases Mana Wisp damage by 30%.
  ~ Crude Hammer: Originally the Light Hammer. Functions as a typical hammer-type weapon.
 - Reworked the Water Elemental's Flow. It now provides a 15% increase to outgoing magical damage, but it increases all MP costs by 30%.
 - Reworked the Gold Ring. Now the Ring of Shadows, it provides resistance to dark damage.
 - Ethers no longer require bits to craft and are much cheaper overall.
 - Increased the stat boost of all tavern potions from 15% to 25%.
 - Nerfed The Warden's Trade-off from [-10% MDR, +10% PDR] to [-5% MDR, +20% PDR].
 - Nerfed the Giant Goblin's Rage's ATK increase from +20% to +10%.
 - Gave Bloodlust's base version +2% PLS.
 - Reworked Blood-Red Headband to grant +1% PLS and +3 AGI rather than +4% MHP and +3% CRI. Its price has increased from 80B to 120B.
 - Buffed the Knight's Greaves' DEF by 1 and AGI by 2, and also gave them +0.5% EVA and +0.5% CRI to be able to compete with the Leather Boots.

Skill Balancing:
 - Many skills had their learn levels and associated party member shuffled around:
  ~ Channel Divinity I: 11 → 5
  ~ Cure II: 8 → 27
  ~ Purify: 5 → 8
  ~ Rejuvenation: 15 → 30
  ~ Offensive Stance: 12 → 5
  ~ Earth Power I: 17 → 23
  ~ Lightning II: 19 → 20
  ~ Magic Resistance/Proneness: P2 15 → P1 17
  ~ Shield Break: P1 16 → P4 18
  ~ Sharpen Dagger: P4 3 → Any Dagger
  ~ Cut Down: P1 11 → Any Axe
  ~ Soul Shackles: P3 20 → Soul Shackles (Tome)
 - Using BP with Revival now increases success rate (used to increase the amount of HP recovered on a successful revive).
 - Backstab can no longer miss.
 - Wand Impulse and Backstab apply a new state called Recovery.
  ~ It decreases ATK/MAT by 50% rather than the old 30%.