@@ -654,7 +654,7 @@
     "params": [
       0,
       0,
-      18,
+      22,
       0,
       0,
       0,
@@ -681,10 +681,10 @@
     "note": "<Weapon Image: 14>\n<Upgrade Slots: 1>\n\n<Synthesis Ingredients>\nEnchanted Stick\nBronze Alloy: 4\nIron Cluster: 2\nMAT Scroll\nEnchanting Crystal\n</Synthesis Ingredients>\n<Mask Name: Strong Wand>\n\n<Disassemble Pool: Advanced>\nx1 Bronze Alloy: 100%\nx1-3 Bronze Alloy: 75%\n</Disassemble Pool: Advanced>",
     "params": [
       0,
-      9,
+      12,
       3,
       0,
-      26,
+      33,
       0,
       0,
       0
@@ -714,10 +714,10 @@
     "note": "<Weapon Image: 118>\n<Upgrade Slots: 1>\n<MP Life Steal Physical: +10%>\n\n<Synthesis Ingredients>\nWood: 5\nSteel Alloy: 5\nElixir: 2\nMDF Scroll\nEnchanting Crystal\n</Synthesis Ingredients>\n<Mask Name: MP Leeching Staff>\n\n<Disassemble Pool: Advanced>\nx1 Steel Staff: 100%\nx1-2 Steel Alloy: 100%\nx1-3 Steel Alloy: 50%\n</Disassemble Pool: Advanced>",
     "params": [
       0,
-      14,
+      17,
       6,
       0,
-      31,
+      35,
       0,
       0,
       0
@@ -748,7 +748,7 @@
     "params": [
       5,
       2,
-      11,
+      13,
       0,
       0,
       0,
@@ -935,8 +935,8 @@
     "params": [
       0,
       0,
-      14,
-      2,
+      18,
+      0,
       0,
       0,
       -2,
@@ -1001,7 +1001,7 @@
     "params": [
       0,
       0,
-      16,
+      21,
       0,
       0,
       0,
