@@ -419,6 +419,7 @@ Item/Equipment Balancing:
  - Reworked most early-game weapons to not be completely useless. Notable reworks (aside from stat/price changes):
   ~ Wisp Wand: Originally the Traveler Wand. Increases Mana Wisp damage by 30%.
   ~ Crude Hammer: Originally the Light Hammer. Functions as a typical hammer-type weapon.
+ - Heavily buffed the stats of the Shadowspec Sword, Bronze Greatsword, Steel Axe, Bronze Wand, Mana Staff, and Bloodlust ★ to prevent buying Telluria Castle Town's weapons from becoming a necessity for progression.
  - Reworked the Water Elemental's Flow. It now provides a 15% increase to outgoing magical damage, but it increases all MP costs by 30%.
  - Reworked the Gold Ring. Now the Ring of Shadows, it provides resistance to dark damage.
  - Ethers no longer require bits to craft and are much cheaper overall.
